# rag-chatbot

./: .env.example  .envrc  .gitignore  ARCHITECTURE.md  LIKELY_QUESTIONS.md  README.md  dev.sh  docker-compose.yml  pyproject.toml
data/docs/: agglayer.md  bridging.md  deploy-contract-pos.md  gas-fees.md  nodes-and-validators.md  polygon-cdk.md  polygon-pos-overview.md  rpc-endpoints.md  smart-contracts.md
mcp-server/: README.md  pyproject.toml  test_cli.py
mcp-server/src/polygon_mcp/: docs.py  rpc.py  server.py
mcp-server/tests/: test_docs.py  test_rpc.py  test_server.py
scripts/: ingest.py
slackbot/: .env.example  README.md  dev.sh  docker-compose.yml  pyproject.toml
slackbot/src/polygon_bot/: cli.py  config.py  llm.py  main.py  ollama_client.py  router.py
slackbot/src/polygon_bot/commands/: gas_usage.py  health.py  help.py  registry.py
slackbot/src/polygon_bot/integrations/: polygon_rpc.py
slackbot/src/polygon_bot/ops/: agent.py  tools.py
slackbot/src/polygon_bot/synthesis/: response.py
slackbot/tests/: __init__.py  test_commands.py  test_router.py  test_synthesis.py
src/: config.py  llm.py  main.py  ollama_client.py
src/commands/: gas_usage.py  health.py  help.py  registry.py
src/guard/: input_guard.py  output_guard.py
src/integrations/: polygon_rpc.py  slack.py
src/ops/: agent.py  tools.py
src/rag/: embeddings.py  pipeline.py  retriever.py
src/router/: intent_manager.py  protocol_switch.py  regex_dispatcher.py
src/synthesis/: response.py
tests/: conftest.py  test_commands.py  test_intent_manager.py  test_protocol_switch.py  test_regex_dispatcher.py  test_synthesis.py
