[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polygon-mcp"
version = "0.1.0"
description = "MCP server for Polygon blockchain knowledge — search docs, query chain status, check gas usage"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[project.scripts]
polygon-mcp = "polygon_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/polygon_mcp"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.wheel.force-include]
"../data/docs" = "polygon_mcp/bundled_docs"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S", "B"]
ignore = ["S101"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
